--- a/src/styles.css
+++ b/src/styles.css
@@ -310,6 +310,8 @@
     margin-left: -5px;
     height: 30px;
     line-height: 10px;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
   }
   
   .ms-bullet {
